# MyTrip

./: .deployignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  API_KEYS_SETUP.md  APP_LOGIN_DEPLOYMENT_GUIDE.md  APP_LOGIN_ENDPOINT_GUIDE.md  CLEAN_DEPLOYMENT_GUIDE.md  CODE_REVIEW_IMPROVEMENTS.md  COMPLETE_DEPLOYMENT_GUIDE.md  COMPREHENSIVE_CODE_REVIEW_REPORT.md  Context.md  DEPLOYMENT_COMPLETE_SUMMARY.md  DEPLOYMENT_LOCATION_DATABASE.md  DEPLOYMENT_QUICK_REFERENCE.md  DEPLOYMENT_READY_SUMMARY.md  DEPLOYMENT_STATUS_SUMMARY.md  DEPLOYMENT_SUMMARY.md  DUAL_DATABASE_SETUP.md  IMMEDIATE_CLEANUP_STEPS.md  LICENSE  LOCATION_HEALTH_ENDPOINT.md  LOCATION_MODULE_GUIDE.md  Makefile  PRODUCTION_DEPLOYMENT_FILES.md  PRODUCTION_DEPLOYMENT_READY.md  README.md  README_API_TESTS.md  README_DEPLOYMENT.md  ROUTE_OPTIMIZATION_FIX_SUMMARY.md  SECURITY.md  SECURITY_INCIDENT_RESOLVED.md  SECURITY_INCIDENT_RESPONSE.md  SOFT_DELETE_DEPLOYMENT_GUIDE.md  SOFT_DELETE_FIXES_SUMMARY.md  TESTING_GUIDE.md  TRIP_DATE_TESTS.md  TRIP_DAYS_SOLUTION.md  TROUBLESHOOTING_FLOWCHART.md  (+30 more)
backend/: .env.example  Dockerfile  README.md  alembic.ini  create_location_tables.py  prestart.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run_tests.py  test_dual_database.py  test_health_integration.py  test_location_health.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_mysql_migration.py  002_add_soft_delete_to_stops_and_deleted_status.py  003_enhance_stops_management.py  010_add_user_settings.py  011_add_user_password.py  387c1b35ca98_update_trip_status_enum.py
backend/app/: main.py
backend/app/core/: auth.py  auth_jwt.py  config.py  database.py  datetime_utils.py  exception_handlers.py  jwt.py  location_database.py  rate_limiting.py  security.py  test_detection.py
backend/app/exceptions/: __init__.py  routing.py
backend/app/models/: __init__.py  base.py  day.py  (+10 more)
backend/docs/: API_SUMMARY.md  README.md  TESTING_CONFIGURATION.md  code_review_improvements.md  graphhopper_configuration_fix.md  openapi.json  openapi.yaml  route_optimization.md
backend/phpEndpoints/: API_ENDPOINTS_CREATED.md  API_ENDPOINTS_SUMMARY.md  BATCH_SYNC_GUIDE.md  DRIVING_API_GUIDE.md  Location_Tracker_API.postman_collection.json  setup-database.php  setup-database.sql
backend/scripts/: check_config.py  create_production_users.py  create_simple_users.py  create_test_users.py  export_openapi.py  export_openapi_no_db.py  export_openapi_simple.py  fix_test_users.py
backend/tests/: conftest.py  test_ai.py  test_auth.py  test_auth_comprehensive.py  test_days.py  test_health.py  test_location.py  test_route_optimization.py  test_routing.py  test_stops_management.py  test_trip_dates.py  test_trips.py
backend/tools/: test_route_optimization.py
(+364 files in other folders)
